New files to commit

--- a/QueryPart.html
+++ b/QueryPart.html
@@ -17,3 +17,18 @@ July 3, 2015
 <iframe width="990" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://www.arcgis.com/home/webmap/templates/OnePane/basicviewer/embed.html?webmap=e0d96253a4e843b1aa9a726e55f34d31&amp;gcsextent=-79.7026,43.5355,-78.963,43.8582&amp;displayslider=true&amp;displayscalebar=false&amp;displaylegend=true&amp;displayprint=true&amp;displaylayerlist=true&amp;displayshare=true&amp;displaydetails=true&amp;displaysearch=true&amp;searchextent=true"></iframe>
 </div>
 <br /><a href="http://www.arcgis.com/apps/OnePane/basicviewer/index.html?appid=a8538eaf67fc4a62834d92fd6c39f4cc" style="color:#0000FF;text-align:left" target="_blank">View Larger Map</a>
+
+
+
+
+
+
+
+<p><span style="font-family: inherit; font-size: 1rem; line-height: 1.6;">&nbsp;</span></p>
+
+<img src="https://test.unitedwaytoronto.org/insertField.field?id=V_QUERY_CONSTITUENT\NAME&amp;name=Leadership%20Honour%20Roll%20-%20Leader%20Donors.Name&amp;nmode=0" style="line-height: 1; cursor: move;" title="" data-runat="server" data-fieldcat="a4f421e1-4fe2-4a43-aaba-8d8db99721ea" data-fieldid="V_QUERY_CONSTITUENT\NAME" />&nbsp;</p>
+<img src="https://test.unitedwaytoronto.org/insertField.field?id=V_QUERY_EVENT\NAME&amp;name=Event Registrant.Event name&amp;nmode=0" style="cursor: move;" title="" data-runat="server" data-fieldcat="3c098aa9-1576-46cf-b062-9e0e11dae42f" data-fieldid="V_QUERY_EVENT\NAME" />
+<img src="https://test.unitedwaytoronto.org/insertField.field?id=V_QUERY_EVENT\STARTDATE&amp;name=Event Registrant.Event start date&amp;nmode=0" style="cursor: move;" title="" data-runat="server" data-fieldcat="3c098aa9-1576-46cf-b062-9e0e11dae42f" data-fieldid="V_QUERY_EVENT\STARTDATE" />
+<img src="https://test.unitedwaytoronto.org/insertField.field?id=V_QUERY_EVENT\STARTDATE&amp;name=Event Registrant.Event start date&amp;nmode=0" style="cursor: move;" title="" data-runat="server" data-fieldcat="3c098aa9-1576-46cf-b062-9e0e11dae42f" data-fieldid="V_QUERY_EVENT\STARTDATE" />
+
+<img src="https://test.unitedwaytoronto.org/insertField.field?id=V_QUERY_EVENT\STARTDATE&amp;name=Event Registrant.Event start date&amp;nmode=0" style="cursor: move;" title="" data-runat="server" data-fieldcat="3c098aa9-1576-46cf-b062-9e0e11dae42f" data-fieldid="V_QUERY_EVENT\STARTDATE" />
